force-app/main/default/objects/AgentLessonLearned__c/AgentLessonLearned__c.object-meta.xml
<CustomObject>
    <description>Stores lessons discovered by agent sessions. Shared across all sessions for collective intelligence.</description>
    <label>Agent Lesson Learned</label>
    <nameField>
        <displayFormat>LESSON-{000000}</displayFormat>
        <label>Lesson Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agent Lessons Learned</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>