force-app/main/default/objects/AgentLessonLearned__c/fields/action_context__c.field-meta.xml
<CustomField>
    <fullName>action_context__c</fullName>
    <description>Specific action or scenario</description>
    <label>Action Context</label>
    <length>255</length>
    <type>Text</type>
</CustomField>