force-app/main/default/objects/AgentLessonLearned__c/fields/admin_notes__c.field-meta.xml
<CustomField>
    <fullName>admin_notes__c</fullName>
    <description>Admin review notes</description>
    <label>Admin Notes</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>