force-app/main/default/objects/AgentLessonLearned__c/fields/categories__c.field-meta.xml
<CustomField>
    <fullName>categories__c</fullName>
    <description>Comma-separated category tags assigned at lesson creation for semantic matching</description>
    <label>Categories</label>
    <length>255</length>
    <type>Text</type>
</CustomField>