force-app/main/default/objects/AgentLessonLearned__c/fields/confidence_score__c.field-meta.xml
<CustomField>
    <fullName>confidence_score__c</fullName>
    <defaultValue>0.50</defaultValue>
    <description>0.00-1.00 confidence</description>
    <label>Confidence Score</label>
    <precision>3</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>