force-app/main/default/objects/AgentLessonLearned__c/fields/created_by_session__c.field-meta.xml
<CustomField>
    <fullName>created_by_session__c</fullName>
    <description>Session ID that discovered</description>
    <label>Created By Session</label>
    <length>80</length>
    <type>Text</type>
</CustomField>