force-app/main/default/objects/AgentLessonLearned__c/fields/deprecated_reason__c.field-meta.xml
<CustomField>
    <fullName>deprecated_reason__c</fullName>
    <description>Why deprecated</description>
    <label>Deprecated Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>