force-app/main/default/objects/AgentLessonLearned__c/fields/is_archived__c.field-meta.xml
<CustomField>
    <fullName>is_archived__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Soft delete flag</description>
    <label>Is Archived</label>
    <type>Checkbox</type>
</CustomField>