force-app/main/default/objects/AgentLessonLearned__c/fields/is_promoted__c.field-meta.xml
<CustomField>
    <fullName>is_promoted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Crosses promotion threshold</description>
    <label>Is Promoted</label>
    <type>Checkbox</type>
</CustomField>