force-app/main/default/objects/AgentLessonLearned__c/fields/last_modified_by_admin__c.field-meta.xml
<CustomField>
    <fullName>last_modified_by_admin__c</fullName>
    <description>When admin last edited</description>
    <label>Last Modified By Admin</label>
    <type>DateTime</type>
</CustomField>