force-app/main/default/objects/AgentLessonLearned__c/fields/last_validated__c.field-meta.xml
<CustomField>
    <fullName>last_validated__c</fullName>
    <description>Last success correlation</description>
    <label>Last Validated</label>
    <type>DateTime</type>
</CustomField>