force-app/main/default/objects/AgentLessonLearned__c/fields/lesson_text__c.field-meta.xml
<CustomField>
    <fullName>lesson_text__c</fullName>
    <description>The lesson content</description>
    <label>Lesson Text</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>