force-app/main/default/objects/AgentLessonLearned__c/fields/outcome_type__c.field-meta.xml
<CustomField>
    <fullName>outcome_type__c</fullName>
    <description>How discovered</description>
    <label>Outcome Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Failure</fullName>
            </value>
            <value>
                <fullName>Optimization</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>