force-app/main/default/objects/AgentLessonLearned__c/fields/times_referenced__c.field-meta.xml
<CustomField>
    <fullName>times_referenced__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Sessions that used this</description>
    <label>Times Referenced</label>
    <precision>8</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>