force-app/main/default/objects/AgentLessonLearned__c/fields/times_successful__c.field-meta.xml
<CustomField>
    <fullName>times_successful__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Successful outcomes</description>
    <label>Times Successful</label>
    <precision>8</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>