force-app/main/default/objects/AgentLessonLearned__c/fields/topic_area__c.field-meta.xml
<CustomField>
    <fullName>topic_area__c</fullName>
    <description>Subagent/topic this lesson applies to</description>
    <label>Topic Area</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>